@@ -18,6 +18,8 @@ reserved word tablename.....* [ticket:206]
 - more fixes to inheritance, related to many-to-many relations
 properly saving
 - fixed bug when specifying explicit module to mysql dialect
+- when QueuePool times out it raises a TimeoutError instead of
+erroneously making another connection
 
 0.2.3
 - overhaul to mapper compilation to be deferred.  this allows mappers
